Mongos defaults to wrong port for config servers

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.2.0-rc4
    • Affects Version/s: 3.2.0-rc2
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding C (11/20/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When starting up a mongos in the 3.2RC's, if you provide a seedlist for the config servers without specifying the port #'s for each, it defaults to 27017. This default makes little sense given that config servers by default start on port 27019.

      If trying to use standard config server defaults this gets confusing since the defaults don't work with each other.

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Osmar Olivo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: