SERVER-21320 When no port is provided for a configdb argument to mongos, assume port 27019.

This is the behavior for mongodb 3.0 and prior, which was inadvertently removed
while refactoring sharding code in preparation for SERVER-1448.